--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "dependencies": {
     "@scenejs/render": "^0.11.2",
-    "del": "^7.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^10.1.0",
     "puppeteer": "^19.2.2",
@@ -35,6 +34,10 @@
     "unrandomize": "^0.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "prettier": "^2.7.1",
+    "rollup": "^3.3.0",
+    "rollup-plugin-babel": "^4.4.0"
   }
 }
