--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "rollup -c",
     "test": "node --trace-warnings test.js"
   },
   "repository": {
@@ -22,22 +23,25 @@
     "node": ">=16.18.1"
   },
   "dependencies": {
-    "@scenejs/render": "^0.11.2",
-    "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^10.1.0",
     "puppeteer": "^19.2.2",
-    "scenejs": "^1.6.0",
     "sprintf-js": "^1.1.2",
-    "timecut-core": "^0.3.3",
     "timesnap": "^0.3.3",
     "timeweb": "^0.3.1",
     "unrandomize": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "prettier": "^2.7.1",
-    "rollup": "^3.3.0",
-    "rollup-plugin-babel": "^4.4.0"
+    "rollup": "^3.2.3",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
