--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "fs-extra": "^10.1.0",
     "puppeteer": "^19.2.2",
+    "rollup-plugin-copy": "^3.4.0",
     "sprintf-js": "^1.1.2",
     "timesnap": "^0.3.3",
     "timeweb": "^0.3.1",
@@ -39,9 +40,9 @@
     "prettier": "^2.7.1",
     "rollup": "^3.2.3",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-uglify": "^6.0.4"
   }
 }
