--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://tareq0065@github.com/tareq0065/onerec.git"
+    "url": "git+https://github.com/tareq0065/onerec.git"
   },
   "keywords": [],
   "author": "Tareq Aziz",
